<resources>
    <string name="app_name">ClickyApp</string>
    <string name="fragment_sign_up_text_title">Sign Up</string>
    <string name="fragment_sign_up_text_first_name">First Name</string>
    <string name="fragment_sign_up_text_last_name">Last Name</string>
    <string name="fragment_sign_up_text_email">School Email</string>
    <string name="fragment_sign_up_text_password">Password</string>
    <string name="fragment_sign_up_hint_email">YourEmail@nymc.edu</string>
    <string name="fragment_sign_up_text_already_have_account">I already have an account</string>
    <string name="fragment_sign_up_text_button_submit">Submit</string>

    <string name="fragment_login_text_make_account">Make an Account</string>
    <string name="fragment_login_text_forgot_password">Forgot Password</string>
    <string name="fragment_login_text_button_submit">Submit</string>

    <string name="course_text_title">Course Title</string>
    <string name="course_text_code">Course Code</string>
    <string name="course_text_instructor_name">Instructor Name</string>

    <string name="text_add_course">Add Course</string>
    <string name="text_create_course">Create Course</string>
    <string name="text_course_title_hint">Foundations in Clinical Medicine</string>
    <string name="text_course_code_hint">UMDM 1101</string>

</resources>
