<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_create_course"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_text_title"/>

    <EditText
        android:id="@+id/edit_text_course_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_course_title_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_text_code"/>

    <EditText
        android:id="@+id/edit_text_course_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_course_code_hint"/>

    <Button
        android:id="@+id/button_create_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"/>

    <Button
        android:id="@+id/button_cancel_create_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"/>


</LinearLayout>